[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resumex"
version = "0.0.1"
dependencies = [
    "graphviz",
    "jsonlines",
    "pydantic",
    'importlib-metadata; python_version<"3.10"',
]

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
include = ["resume*"]  # ["*"] by default
exclude = ["resume.tests*"]  # empty by default
namespaces = false  # true by default