[tool.poetry]
name = "resumex"
version = "0.0.2"
description = ""
authors = ["Yikai Lai <laiyk5@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.3"
jsonlines = "^4.0.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
